# lulan

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  QUICKSTART-events.md  QUICKSTART.md  README.md  justfile  package.json
.github/workflows/: ci.yml
crates/lulan-api/: Cargo.toml  openapi.json
crates/lulan-api/migrations/: 0001_init.sql  0002_network_and_occupancy.sql  0003_orders_and_events.sql  0004_fare_rules.sql  0005_passengers_and_tickets.sql  0006_integrations_and_auth.sql  0007_itineraries.sql  0008_operators_and_schedule.sql  0009_ancillaries.sql  0010_staff_and_admin.sql  0011_idempotency_and_currency.sql  0012_ticket_key_encryption.sql  0013_pool_admission.sql
crates/lulan-api/src/: admin.rs  ancillaries.rs  auth.rs  config.rs  cors.rs  error.rs  gtfs.rs  health.rs  idempotency.rs  identity.rs  lib.rs  main.rs  metrics.rs  orders.rs  pricing.rs  quotes.rs  rate_limit.rs  reservations.rs  seed.rs  staff.rs  state.rs  telemetry.rs  tickets.rs  trips.rs  webhooks_admin.rs
crates/lulan-api/tests/: admin_it.rs  ancillaries_it.rs  auth_it.rs  availability_it.rs  claims_it.rs  events_it.rs  gtfs_it.rs  itinerary_it.rs  jwks_it.rs  orders_it.rs  quotes_it.rs  ticket_encryption_it.rs  tickets_it.rs  webhooks_it.rs
crates/lulan-api/tests/fixtures/gtfs/: agency.txt  calendar.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
crates/lulan-engine/: Cargo.toml
crates/lulan-engine/examples/: gen_ticket_vector.rs
crates/lulan-engine/src/: lib.rs
crates/lulan-engine/src/domain/: capacity.rs  ids.rs  mod.rs  network.rs  order.rs  passenger.rs  pool.rs  segment.rs
crates/lulan-engine/src/events/: mod.rs
crates/lulan-engine/src/inventory/: holds.rs  mod.rs  store.rs
crates/lulan-engine/src/orders/: mod.rs
crates/lulan-engine/src/payments/: http.rs  mod.rs
crates/lulan-engine/src/ticket/: mod.rs  sealing.rs
crates/lulan-engine/src/webhooks/: mod.rs
crates/lulan-engine/tests/: occupancy_properties.rs  payment_provider.rs  ticket_wire_contract.rs
crates/lulan-loadgen/: Cargo.toml
crates/lulan-loadgen/src/: main.rs
crates/lulan-pricing/: Cargo.toml
crates/lulan-pricing-guest/: Cargo.toml
crates/lulan-pricing-guest/src/: lib.rs
crates/lulan-pricing/src/: lib.rs  native.rs  rules.rs  wasm.rs
crates/lulan-pricing/tests/: differential.rs
crates/lulan-pricing/wit/: pricing.wit
crates/lulan-validate/: Cargo.toml
crates/lulan-validate-wasm/: Cargo.toml
crates/lulan-validate-wasm/src/: lib.rs
crates/lulan-validate/examples/: offline_gate.rs
crates/lulan-validate/src/: lib.rs
deploy/: README.md
deploy/compose/: .env.example  Caddyfile  bundled-db.yml  dev.yml  production.yml
deploy/k8s/lulan/: Chart.yaml  values.yaml
deploy/k8s/lulan/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/payment-providers/: example.json
docs/: PRD.md  benchmarks.md  development-plan.md
docs/launch/: post-no-double-sell.md  post-offline-boarding.md  video-script.md
