[workspace]
resolver = "3"
members = [
    "crates/lulan-engine",
    "crates/lulan-pricing",
    "crates/lulan-pricing-guest",
    "crates/lulan-validate",
    "crates/lulan-api",
    "crates/lulan-loadgen",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/thinkgrid-labs/lulan"
authors = ["Lulan contributors"]

[workspace.dependencies]
lulan-engine = { path = "crates/lulan-engine" }
lulan-pricing = { path = "crates/lulan-pricing" }
lulan-validate = { path = "crates/lulan-validate" }

anyhow = "1"
axum = { version = "0.8", features = ["http2"] }
base64 = "0.22"
ciborium = "0.2"
ed25519-dalek = "2"
hmac = "0.12"
proptest = "1"
serde_bytes = "0.11"
sha2 = "0.10"
wasmtime = "41"
rand = "0.9"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager", "script"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "macros",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
