[package]
name = "lulan-api"
description = "Lulan API server: Axum HTTP layer, auth, OpenAPI, webhooks"
license = "AGPL-3.0-only"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
lulan-engine = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
