[package]
name = "lulan-api"
description = "Lulan API server: Axum HTTP layer, auth, OpenAPI, webhooks"
license = "AGPL-3.0-only"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
lulan-engine = { workspace = true }
lulan-pricing = { path = "../lulan-pricing" }
jsonwebtoken = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sha2 = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
lulan-validate = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true, features = ["util"] }
