[package]
name = "lulan-api"
description = "Lulan API server: Axum HTTP layer, auth, OpenAPI, webhooks"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
hmac = { workspace = true }
lulan-engine = { workspace = true }
lulan-pricing = { path = "../lulan-pricing" }
jsonwebtoken = { workspace = true }
metrics = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true }
sha2 = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[features]
# Export spans over OTLP. Off by default; `/metrics` is the v1 baseline.
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
base64 = { workspace = true }
lulan-validate = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true, features = ["util"] }
