[package]
name = "lulan-engine"
description = "Lulan core engine: domain model, segment inventory, events, orders, ticketing"
license = "AGPL-3.0-only"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
ciborium = { workspace = true }
ed25519-dalek = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
lulan-validate = { workspace = true }
proptest = { workspace = true }
