[package]
name = "lulan-loadgen"
description = "Lulan load harness: concurrency invariant checker and benchmarks"
license = "AGPL-3.0-only"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
