[package]
name = "lulan-validate-wasm"
description = "wasm-bindgen wrapper over lulan-validate — the @lulan/validate npm package"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# This crate exists to keep wasm-bindgen OUT of lulan-validate, which CI
# builds for wasm32-unknown-unknown without it. It is not part of the
# native test run; wasm-pack builds it for the browser/Node.
[dependencies]
lulan-validate = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"

[package.metadata.wasm-pack.profile.release]
# Ship small: this rides in boarding apps and kiosks.
wasm-opt = ["-Oz"]
